--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href='https://n2o.space'>SPEC</a>
     <a href='https://o7.n2o.space'>O7</a>
     <a href='https://chat.n2o.space' style="background:#ededed;">CHAT</a>
+    <a href='https://n2o.im'>SERVICE</a>
 </nav>
 <header>
     <a href="https://github.com/synrc/chat"><img src="https://synrc.space/images/Synrc Neo.svg?v=1"></a>
