--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <nav>
+    <a href='https://chat.n2o.space'>README</a>
 </nav>
 <header>
     <a href="https://github.com/synrc/chat"><img src="https://synrc.space/images/Synrc Neo.svg?v=1"></a>
@@ -24,22 +25,15 @@
  $ wscat -c wss://n2o.im
         </code>
         </figure>
+        <div>Open source lightweight secure messaging service in 100&nbsp;LOC with front-end for
+             Kotlin, Swift and wscat clients.</div>
         </section>
     </article>
 </aside>
 <main>
-    <section>
-        <a name=plugin><h3>CONTRIBUTORS</h3></a>
-        <div>
-        <ul>
-           <li><a href="https://github.com/5HT">5HT</a> &mdash; Namdak Tonpa</li>
-           <li><a href="https://github.com/proger">proger</a> &mdash; Vlad Ki</li>
-        </ul></div>
-        <br><br>
-    </section>
 </main>
 <footer>
-    Made with <span class="heart">❤</span> to N2O
+    Made with <span class="heart">❤</span> by SYNRC
 </footer>
 </body>
 </html>
