--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -25,8 +25,7 @@
  $ wscat -c wss://n2o.im
         </code>
         </figure>
-        <div>Open source lightweight secure messaging service in 100&nbsp;LOC with front-end for
-             Kotlin, Swift and wscat clients.</div>
+        <div>Open source lightweight messaging service in 100&nbsp;LOC for wscat.</div>
         </section>
     </article>
 </aside>
