--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
     <h3>TXT</h3>
     <p>The implementation of TXT CHAT protocol is trying to be informative but
        not excessive, it should take care of run-time edge
-       cases but not too stable. Following the poor man's
-       philosophy CHAT application tends to scales and
-       perform well even in 100 LOC (25% Erlang/OTP
-       bootstrapping, 25% WebSocket protocol, 50% server protocol).
+       cases but not too stable.
      </p>
     <figure><code>
  > N2O,3
