--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 <nav>
-    <a href='https://n2o.space'>SPEC</a>
-    <a href='https://o7.n2o.space'>O7</a>
+    <a href='https://n2o.space'>SPACE</a>
     <a href='https://chat.n2o.space' style="background:#ededed;">CHAT</a>
     <a href='https://n2o.im'>SERVICE</a>
 </nav>
