back to n2o.dev

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <article>
         <section>
             <h3>SYNOPSIS</h3>
-            
             <div>CHAT is a QoS=1 one-directional (client to server) example of a messaging system built on top of:</div>
             <div>
                  <ul>
@@ -39,7 +38,7 @@
 
         </section>
         <section>
-            <h3>MODULES</h3>
+            <h3><a href="https://n2o.dev">MODULES</a></h3>
             <div><ul>
            <li><a href="man/chat.htm">CHAT</a></font></li>
            <li><a href="man/chat_client.htm">CLIENT</a></font></li>
