--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav>
-    <a href='https://n2o.dev'>DEV</a>
+    <a href='https://n2o.space'>SPACE</a>
     <a href='https://chat.n2o.space' style="background:#ededed;">CHAT</a>
     <a href='https://n2o.im'>SERVICE</a>
 </nav>
