--- a/man/chat.htm
+++ b/man/chat.htm
@@ -10,9 +10,9 @@
 </head>
 <body>
 <nav>
-    <a href='https://n2o.space'>SPEC</a>
-    <a href='https://o7.n2o.space'>O7</a>
-    <a href='../index.html'>CHAT</a>
+    <a href='https://n2o.dev'>DEV</a>
+    <a href='https://kvx.n2o.space'>CHAT</a>
+    <a href='#' style="background:#ededed;">CHAT</a>
 </nav>
 <header>
     <a href="../index.html"><img src="https://n2o.space/img/Synrc Neo.svg"></a>
