--- a/man/chat_client.htm
+++ b/man/chat_client.htm
@@ -10,8 +10,8 @@
 </head>
 <body>
 <nav>
-    <a href='https://n2o.dev'>DEV</a>
-    <a href='https://kvx.n2o.space'>CHAT</a>
+    <a href='https://n2o.space'>SPACE</a>
+    <a href='https://chat.n2o.space'>CHAT</a>
     <a href='#' style="background:#ededed;">CLIENT</a>
 </nav>
 <header>
