--- a/index.html
+++ b/index.html
@@ -68,33 +68,35 @@
        cases but not too stable.
      </p>
     <figure><code>
- > N2O,3
- < USER 3
- > N2O,5
- < USER 5
- > MSG 3 5 0 HELO
- < SENT "1555430866970405323"
- < NOTIFY 3:5:1555430866970405323:HELO
- < NOTIFY 3:5:1555430866970405323:HELO
- < ACK "1555430866970405323"
- > MSG 3 5 0 KITTY
- < SENT "1555430873158862112"
- < NOTIFY 3:5:1555430873158862112:KITTY
- < NOTIFY 3:5:1555430873158862112:KITTY
- < ACK "1555430873158862112"
- > MSG 3 5 QoS=1 BYE
- < SENT "QoS=1"
- < NOTIFY 3:5:QoS=1:BYE
- < NOTIFY 3:5:QoS=1:BYE
- < ACK "QoS=1"
- > MSG 3 5 QoS=1 BYE
- < SENT "QoS=1"
- < ACK "QoS=1"
- > HIST 3 5
- < CHAT 3 5
- 3:5:1555430873158862112:KITTY
- 3:5:1555430866970405323:HELO
- 3:5:QoS=1:BYE
+ $ wscat -c wss://n2o.im
+ connected (press CTRL+C to quit)
+ > HLP
+ < N2O <user>
+ | SEND <user> <msg>
+ | BOX
+ | CUT <id>.
+ > N2O maxim
+ < USER maxim
+ > SEND vlad HELO
+ < ERR user doesn't exist.
+ > N2O vlad
+ < USER vlad
+ > SEND vlad HELO
+ <
+ < NOTIFY vlad:vlad:1556151347689164006:HELO
+ < ACK "1556151347689164006"
+ > BOX
+ < LIST
+ vlad:vlad:1556151347689164006:HELO
+ > SEND maxim HELO
+ <
+ < NOTIFY vlad:maxim:1556151355731244849:HELO
+ < ACK "1556151355731244849"
+ > N2O maxim
+ < USER maxim
+ > BOX
+ < LIST
+ vlad:maxim:1556151355731244849:HELO
     </code></figure>
     </section>
 
